# Geophone

./: .gitignore  CMakeLists.txt  README  makefile  test.py
arduino/: sample.ino
arduino/double_geo/: double_geo.ino
native/include/: analyze.h
native/src/: analyze.c  geophone.c  geophone_module.c
python/: main.py  packet.py  serialport.py  serialthread.py  try_s.py  trydata.py
tools/: build.sh
